test_src/compiler_errors/literals/LongTooLargeError6.n
class LongTooLargeError6 {
    void test() {
        println(-0x1234abcd5678cdef12L);
    }
}
